Restantes formato, agregar implementation roadmap para cambios faltantes
Roadmap para ir implementando sistematicamente funcionalidades faltantes.